fix: removing top and bottom padding on mobile

--- a/src/global.scss
+++ b/src/global.scss
@@ -40,7 +40,7 @@ main {
 
 @media screen and (max-width: 767px) {
 	main {
-		margin: 2rem;
+		margin: 0 2rem;
 	}
 }
 
